# Scrotocol

./: .gitignore  CMakeLists.txt  README.md
data/: scrotocol.desktop
src/: Capture.cpp  Capture.h  Config.cpp  Config.h  CropOverlay.cpp  CropOverlay.h  FilterEngine.cpp  FilterEngine.h  HistoryStore.cpp  HistoryStore.h  MainWindow.cpp  MainWindow.h  TrayIcon.cpp  TrayIcon.h  main.cpp
